--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-            height: auto%;  /* 高度自动适应内容 */
+            height: 200%;  /* 高度自动适应内容 */
             overflow-x: auto; /* 启用垂直滚动 */
         }
 
