--- a/index.html
+++ b/index.html
@@ -95,6 +95,12 @@
             max-width: 1200px; /* 可选，设置最大宽度来控制main的宽度 */
         }
 
+        @media (max-width: 768px) {
+            main {
+                padding-left: 15px;  /* 调整左右边距 */
+                padding-right: 15px; /* 调整左右边距 */
+    }
+
         section {
             margin: 40px 0;
         }
