--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         main {
             background: white;
             color: black;
-            padding: 100px; /* 上移 80px */
+            padding: 100px 40px 40px; /* 上移 80px */
             margin-left: auto;
             margin-right: auto;
             max-width: 1200px; /* 可选，设置最大宽度来控制main的宽度 */
