--- a/index.html
+++ b/index.html
@@ -62,8 +62,13 @@
         /* 导航栏 */
         nav {
             display: flex;
-            justify-content: center;
+            justify-content: flex-start; /* 按钮靠左对齐 */
+            overflow-x: auto; /* 启用水平滚动 */
             padding: 10px 0;
+            white-space: nowrap; /* 防止按钮换行 */
+            scroll-behavior: smooth; /* 平滑滚动效果（可选） */
+            box-shadow: inset -10px 0 10px -10px rgba(0, 0, 0, 0.5),
+                        inset 10px 0 10px -10px rgba(0, 0, 0, 0.5);
         }
 
         nav a {
@@ -74,6 +79,7 @@
             padding: 5px 10px;
             border-radius: 5px;
             transition: background-color 0.3s;
+            flex-shrink: 0; /* 防止按钮缩小 */
         }
 
         nav a:hover {
