--- a/index.html
+++ b/index.html
@@ -62,13 +62,11 @@
         /* 导航栏 */
         nav {
             display: flex;
-            justify-content: flex-start; /* 按钮靠左对齐 */
+            justify-content: center; /* 按钮居中对齐 */
             overflow-x: auto; /* 启用水平滚动 */
             padding: 10px 0;
             white-space: nowrap; /* 防止按钮换行 */
             scroll-behavior: smooth; /* 平滑滚动效果（可选） */
-            box-shadow: inset -10px 0 10px -10px rgba(0, 0, 0, 0.5),
-                        inset 10px 0 10px -10px rgba(0, 0, 0, 0.5);
         }
 
         nav a {
