--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
         <section>
             <div class="section-title">Exhibition</div>
             <div class="scroll-container">
-                <img src="assets/images/demo1.jpg" alt="Demo 1">
-                <img src="assets/images/demo2.jpg" alt="Demo 2">
-                <img src="assets/images/demo3.jpg" alt="Demo 3">
+                <img src="assets/screenshots/2023-09-02_00.17.19.png" alt="Demo 1">
+                <img src="assets/screenshots/2023-09-02_00.17.13.png" alt="Demo 2">
+                <img src="assets/screenshots/2023-09-02_00.17.14.png" alt="Demo 3">
             </div>
         </section>
 
