--- a/index.html
+++ b/index.html
@@ -185,6 +185,9 @@
                 <img src="assets/screenshots/2023-09-02_00.17.19.png" alt="Demo 1">
                 <img src="assets/screenshots/2023-09-02_00.20.13.png" alt="Demo 2">
                 <img src="assets/screenshots/2023-09-02_01.01.14.png" alt="Demo 3">
+                <img src="assets/screenshots/2023-09-02_00.39.07.png" alt="Demo 4">
+                <img src="assets/screenshots/2023-09-04_01.17.04.png" alt="Demo 5">
+                <img src="assets/screenshots/2023-09-04_01.46.58.png" alt="Demo 6">
             </div>
         </section>
 
