--- a/index.html
+++ b/index.html
@@ -205,9 +205,10 @@
         <section>
             <div class="section-title">Video Preview</div>
             <div class="scroll-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_1" frameborder="0" allowfullscreen></iframe>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_2" frameborder="0" allowfullscreen></iframe>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_3" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://youtu.be/nosRGLEdd-c?si=lGDPBo-7Fq3aiVdF" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://youtu.be/qLEBkCaoqh8?si=yLcbAv-PL4dzpI-I" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://youtu.be/TGEj-YfKJzc?si=qRQCv9rHQWzc97Gp" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://youtu.be/RyfhZeumv_U?si=mnKLw0HcYSjN89IA" frameborder="0" allowfullscreen></iframe>
             </div>
         </section>
     </main>
