--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@
 
         .scroll-container img {
             max-height: 200px;
+            height: auto;
+            flex-shrink: 0;
             cursor: pointer;
             transition: transform 0.3s ease;
         }
