--- a/index.html
+++ b/index.html
@@ -145,6 +145,13 @@
             transform: scale(1.1);
         }
 
+        .video-thumbnail img {
+            width: 320px;  /* 设置图片宽度 */
+            height: 180px; /* 设置图片高度，保持 16:9 比例 */
+            object-fit: cover; /* 确保图片裁剪时不变形 */
+            border-radius: 8px; /* 可选：添加圆角效果 */
+}
+
         footer {
             background: #222;
             color: white;
@@ -207,7 +214,7 @@
         <section>
             <div class="section-title">Video Preview</div>
             <div class="scroll-container">
-                <a href="https://youtu.be/nosRGLEdd-c?si=lGDPBo-7Fq3aiVdF" target="_blank"> <img src="https://img.youtube.com/vi/nosRGLEdd-c/hqdefault.jpg" alt="Video Thumbnail" width="560" height="315"> </a>
+                <a href="https://youtu.be/nosRGLEdd-c?si=lGDPBo-7Fq3aiVdF" target="_blank"> <img src="https://img.youtube.com/vi/nosRGLEdd-c/hqdefault.jpg" alt="Video Thumbnail" > </a>
                 <iframe width="560" height="315" src="https://youtu.be/nosRGLEdd-c?si=lGDPBo-7Fq3aiVdF" frameborder="0" allowfullscreen></iframe>
                 <iframe width="560" height="315" src="https://youtu.be/qLEBkCaoqh8?si=yLcbAv-PL4dzpI-I" frameborder="0" allowfullscreen></iframe>
                 <iframe width="560" height="315" src="https://youtu.be/TGEj-YfKJzc?si=qRQCv9rHQWzc97Gp" frameborder="0" allowfullscreen></iframe>
