--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
             <div class="section-title">Video Preview</div>
             <div class="scroll-container">
                 <a href="https://youtu.be/nosRGLEdd-c?si=lGDPBo-7Fq3aiVdF" target="_blank"> <img src="https://img.youtube.com/vi/nosRGLEdd-c/hqdefault.jpg" alt="Video Thumbnail" > </a>
+                <a href="https://youtu.be/qLEBkCaoqh8?si=yLcbAv-PL4dzpI-I" target="_blank"> <img src="https://img.youtube.com/vi/qLEBkCaoqh8/hqdefault.jpg" alt="Video Thumbnail" > </a>
                 <iframe width="560" height="315" src="https://youtu.be/nosRGLEdd-c?si=lGDPBo-7Fq3aiVdF" frameborder="0" allowfullscreen></iframe>
                 <iframe width="560" height="315" src="https://youtu.be/qLEBkCaoqh8?si=yLcbAv-PL4dzpI-I" frameborder="0" allowfullscreen></iframe>
                 <iframe width="560" height="315" src="https://youtu.be/TGEj-YfKJzc?si=qRQCv9rHQWzc97Gp" frameborder="0" allowfullscreen></iframe>
