--- a/index.html
+++ b/index.html
@@ -217,10 +217,8 @@
             <div class="scroll-container">
                 <a href="https://youtu.be/nosRGLEdd-c?si=lGDPBo-7Fq3aiVdF" target="_blank"> <img src="https://img.youtube.com/vi/nosRGLEdd-c/hqdefault.jpg" alt="Video Thumbnail" > </a>
                 <a href="https://youtu.be/qLEBkCaoqh8?si=yLcbAv-PL4dzpI-I" target="_blank"> <img src="https://img.youtube.com/vi/qLEBkCaoqh8/hqdefault.jpg" alt="Video Thumbnail" > </a>
-                <iframe width="560" height="315" src="https://youtu.be/nosRGLEdd-c?si=lGDPBo-7Fq3aiVdF" frameborder="0" allowfullscreen></iframe>
-                <iframe width="560" height="315" src="https://youtu.be/qLEBkCaoqh8?si=yLcbAv-PL4dzpI-I" frameborder="0" allowfullscreen></iframe>
-                <iframe width="560" height="315" src="https://youtu.be/TGEj-YfKJzc?si=qRQCv9rHQWzc97Gp" frameborder="0" allowfullscreen></iframe>
-                <iframe width="560" height="315" src="https://youtu.be/RyfhZeumv_U?si=mnKLw0HcYSjN89IA" frameborder="0" allowfullscreen></iframe>
+                <a href="https://youtu.be/TGEj-YfKJzc?si=qRQCv9rHQWzc97Gp" target="_blank"> <img src="https://img.youtube.com/vi/TGEj-YfKJzc/hqdefault.jpg" alt="Video Thumbnail" > </a>
+                <a href="https://youtu.be/RyfhZeumv_U?si=mnKLw0HcYSjN89IA" target="_blank"> <img src="https://img.youtube.com/vi/RyfhZeumv_U/hqdefault.jpg" alt="Video Thumbnail" > </a>
             </div>
         </section>
     </main>
