--- a/index.html
+++ b/index.html
@@ -219,6 +219,7 @@
                 <a href="https://youtu.be/qLEBkCaoqh8?si=yLcbAv-PL4dzpI-I" target="_blank"> <img src="https://img.youtube.com/vi/qLEBkCaoqh8/hqdefault.jpg" alt="Video Thumbnail" > </a>
                 <a href="https://youtu.be/TGEj-YfKJzc?si=qRQCv9rHQWzc97Gp" target="_blank"> <img src="https://img.youtube.com/vi/TGEj-YfKJzc/hqdefault.jpg" alt="Video Thumbnail" > </a>
                 <a href="https://youtu.be/RyfhZeumv_U?si=mnKLw0HcYSjN89IA" target="_blank"> <img src="https://img.youtube.com/vi/RyfhZeumv_U/hqdefault.jpg" alt="Video Thumbnail" > </a>
+                <a href="https://youtu.be/zdlCZ56x13c?si=dOIwqagCXjKfTIUw" target="_blank"> <img src="https://img.youtube.com/vi/zdlCZ56x13c/hqdefault.jpg" alt="Video Thumbnail" > </a>
             </div>
         </section>
     </main>
