--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>RainbowPixel</title>
-    <link rel="icon" href="assets/images/RP_Logo_104_right.ico" type="image/x-icon">
+    <title>Jakob_zero</title>
+    <link rel="icon" href="assets/images/Jakob_Logo-64a-export.ico" type="image/x-icon">
     <style>
         /* 全局样式 */
         body, html {
@@ -178,7 +178,7 @@
     </header>
     <!-- 主标题 -->
     <div class="main-title">
-        RainbowPixel Studio
+        Jakob.Zero
     </div>
     <!-- 空白区域 -->
     <div class="spacer"></div>
@@ -186,9 +186,9 @@
     <!-- 主体内容 -->
     <main>
         <section>
-            <img src="assets/images/RP_Logo_104_right_wb.png" alt="Studio Logo">
-            <h2>RainbowPixel Studio</h2>
-            <p>RainbowPixel is a vibrant and creative young team dedicated to content creation for the Minecraft Marketplace. We specialize in developing high-quality texture packs, skin packs, behavior packs, and maps, delivering diverse and exciting experiences for players. Our goal is to showcase the endless possibilities of Minecraft through unique creativity and professional craftsmanship, lighting up the blocky worlds of every player!</p>
+            <img src="assets/images/Jakob_Logo-64a.png" alt="Jakob_zero Logo">
+            <h2>Jakob.Zero</h2>
+            <p>Hi everyone, I'm Jakob.Zero, a Minecraft texture pack creator. I've been creating the BlockPixel texture pack since 2011, making it 14 years now. I am still actively developing and updating the texture pack. Over the years, I’ve made many friends from around the world who share the same interests. I’m deeply grateful for their companionship and encouragement throughout the years. All of this has been made possible thanks to the support and encouragement from friends like you.</p>
         </section>
         <!-- 展示区 -->
         <section>
@@ -228,7 +228,7 @@
 
     <!-- 页脚 -->
     <footer>
-        <p>&copy; 2024 RainbowPixel. All Rights Reserved.</p>
+        <p>&copy; 2024 Jakob.Zero. All Rights Reserved.</p>
     </footer>
 
     <script>
