--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     </header>
     <!-- 主标题 -->
     <div class="main-title">
-        Jakob.Zero
+        WELCOME
     </div>
     <!-- 空白区域 -->
     <div class="spacer"></div>
