--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Jakob_zero</title>
+    <title>Jakob.Zero|Home</title>
     <link rel="icon" href="assets/images/Jakob_Logo-64a-export.ico" type="image/x-icon">
     <style>
         /* 全局样式 */
@@ -178,7 +178,7 @@
     </header>
     <!-- 主标题 -->
     <div class="main-title">
-        WELCOME
+        Hello World!
     </div>
     <!-- 空白区域 -->
     <div class="spacer"></div>
