--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Jakob.Zero|Home</title>
+    <title>Jakob.zero|Home</title>
     <link rel="icon" href="assets/images/Jakob_Logo-64a-export.ico" type="image/x-icon">
     <style>
         /* 全局样式 */
