--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             top: 0;
             left: 0;
             width: 100%;
-            background: rgba(121, 25, 101, 1); /* 背景颜色，带透明效果 */
+            background: green; /* 背景颜色，带透明效果 */
             color: #fff;
             padding: 10px 0;
             z-index: 10;
