--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
         /* 标题样式 */
         .section-title {
-            background: rgba(121, 25, 101, 0.9);
+            background: green);
             color: white;
             padding: 10px;
             text-align: center;
