--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         }
 
         nav a:hover {
-            background-color: #ff6584;
+            background-color: lime;
         }
 
         /* 空白区域 */
