--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         }
 
         nav a:hover {
-            background-color: lime;
+            background-color: #78cf24;
         }
 
         /* 空白区域 */
@@ -119,7 +119,7 @@
 
         /* 标题样式 */
         .section-title {
-            background: green);
+            background: green;
             color: white;
             padding: 10px;
             text-align: center;
