--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         .section-title {
             background: green;
             color: white;
-            padding: 10px;
+            padding: 10px 0;
             text-align: center;
             margin-bottom: 20px;
         }
