--- a/index.html
+++ b/index.html
@@ -121,6 +121,8 @@
         .section-title {
             background: green;
             color: white;
+            left: 0;
+            width: 100%;
             padding: 10px 0;
             text-align: center;
             margin-bottom: 20px;
