--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
         main {
             background: white;
             color: black;
+            left: 0;
+            width: 100%;
             padding: 100px 20px 20px; /* 上移 80px */
             margin-left: auto;
             margin-right: auto;
