--- a/index.html
+++ b/index.html
@@ -94,12 +94,11 @@
         main {
             background: white;
             color: black;
-            left: 0;
-            width: 100%;
-            padding: 100px 20px 20px; /* 上移 80px */
-            margin-left: auto;
-            margin-right: auto;
-            max-width: 1200px; /* 可选，设置最大宽度来控制main的宽度 */
+            width: 100%; /* 宽度占满窗口 */
+            margin: 0; /* 移除默认的外边距 */
+            padding: 0; /* 移除默认的内边距 */
+            display: flex; /* 使用 flex 布局 */
+            justify-content: center; /* 内容水平居中 */
         }
 
         section {
