--- a/index.html
+++ b/index.html
@@ -94,11 +94,9 @@
         main {
             background: white;
             color: black;
-            width: 100%; /* 宽度占满窗口 */
-            margin: 0; /* 移除默认的外边距 */
-            padding: 0; /* 移除默认的内边距 */
-            display: flex; /* 使用 flex 布局 */
-            justify-content: center; /* 内容水平居中 */
+            padding: 100px 20px 20px; /* 上移 80px */
+            margin: 0 auto; /* 设置上下边距为 0，左右居中 */
+            max-width: 100%; /* 设置最大宽度占满窗口 */
         }
 
         section {
