--- a/index.html
+++ b/index.html
@@ -92,11 +92,13 @@
 
         /* 主内容样式 */
         main {
+            width: 100%; /* 主内容区宽度占满窗口 */
+            margin: 0; /* 移除外边距 */
+            padding: 0; /* 移除内边距 */
             background: white;
             color: black;
-            width: 100%; /* 宽度占满窗口 */
-            margin: 0; /* 移除默认的外边距 */
-            padding: 0; /* 移除默认的内边距 */
+            display: flex; /* 使用 flex 布局 */
+            justify-content: center; /* 内容水平居中 */
         }
 
         section {
