--- a/index.html
+++ b/index.html
@@ -92,13 +92,12 @@
 
         /* 主内容样式 */
         main {
-            width: 100%; /* 主内容区宽度占满窗口 */
-            margin: 0; /* 移除外边距 */
-            padding: 0; /* 移除内边距 */
             background: white;
             color: black;
-            display: flex; /* 使用 flex 布局 */
-            justify-content: center; /* 内容水平居中 */
+            padding: 100px 20px 20px; /* 上移 80px */
+            margin-left: auto;
+            margin-right: auto;
+            max-width: 1200px; /* 可选，设置最大宽度来控制main的宽度 */
         }
 
         section {
@@ -122,9 +121,7 @@
         .section-title {
             background: green;
             color: white;
-            left: 0;
-            width: 100%;
-            padding: 10px 0;
+            padding: 10px;
             text-align: center;
             margin-bottom: 20px;
         }
