--- a/index.html
+++ b/index.html
@@ -92,12 +92,20 @@
 
         /* 主内容样式 */
         main {
+            width: 100%; /* 主内容区宽度占满窗口 */
+            margin: 0; /* 移除外边距 */
+            padding: 0; /* 移除内边距 */
             background: white;
             color: black;
-            padding: 100px 20px 20px; /* 上移 80px */
-            margin-left: auto;
-            margin-right: auto;
-            max-width: 1200px; /* 可选，设置最大宽度来控制main的宽度 */
+            display: flex; /* 使用 flex 布局 */
+            justify-content: center; /* 内容水平居中 */
+        }
+
+        main > section {
+            width: 100%; /* 默认占满窗口宽度 */
+            max-width: 1200px; /* 可选：限制内容的最大宽度 */
+            padding: 20px; /* 给内容一些间距 */
+            box-sizing: border-box; /* 确保 padding 不影响宽度计算 */
         }
 
         section {
