--- a/index.html
+++ b/index.html
@@ -92,13 +92,12 @@
 
         /* 主内容样式 */
         main {
-            width: 100%; /* 主内容区宽度占满窗口 */
-            margin: 0; /* 移除外边距 */
-            padding: 0; /* 移除内边距 */
             background: white;
             color: black;
-            display: flex; /* 使用 flex 布局 */
-            justify-content: center; /* 内容水平居中 */
+            padding: 100px 20px 20px; /* 上移 80px */
+            margin: 0 auto;
+            max-width: 100%; /* 可选，设置最大宽度来控制main的宽度 */
+            box-sizing: border-box; /* 确保 padding 不影响宽度计算 */
         }
         
         section {
