--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
 
         /* 空白区域 */
         .spacer {
-            height: 90vh; /* 空白区域为一个屏幕高度 */
+            height: 60vh; /* 空白区域为一个屏幕高度 */
+            background: none; /* 确保没有背景色遮挡 */
         }
 
         /* 主内容样式 */
@@ -98,6 +99,8 @@
             margin-left: auto;
             margin-right: auto;
             max-width: 1200px; /* 可选，设置最大宽度来控制main的宽度 */
+            position: relative; /* 确保覆盖在 spacer 之上 */
+            z-index: 1;
         }
         
         section {
