--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
             margin-left: auto;
             margin-right: auto;
             max-width: 1200px; /* 可选，设置最大宽度来控制main的宽度 */
+            position: relative; /* 确保覆盖在 spacer 之上 */
         }
         
         section {
