--- a/index.html
+++ b/index.html
@@ -95,13 +95,20 @@
         main {
             background: white; /* 背景设置为白色 */
             color: black;
-            padding: 80px 20px 20px; /* 内边距 */
+            padding: 80px 0 20px; /* 上下内边距，去掉左右内边距 */
             margin: 0; /* 去掉自动对齐的外边距 */
             width: 100%; /* 占据整个页面宽度 */
             box-sizing: border-box; /* 包括内边距在宽度计算中 */
             position: relative; /* 确保不被其他元素遮挡 */
             max-width: none; /* 去掉最大宽度限制 */
-}
+        }
+
+        .content-container {
+            max-width: 1200px; /* 限制内容最大宽度 */
+            margin: 0 auto; /* 居中对齐 */
+            padding: 0 20px; /* 可选：增加内容内边距 */
+            box-sizing: border-box; /* 包括内边距在宽度计算中 */
+        }
         
         section {
             margin: 40px 0;
