--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
         .content-container {
             max-width: 1200px; /* 限制内容最大宽度 */
-            margin: 0 auto; /* 居中对齐 */
+            margin: auto auto; /* 居中对齐 */
             padding: 0 20px; /* 可选：增加内容内边距 */
             box-sizing: border-box; /* 包括内边距在宽度计算中 */
         }
