--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
             padding: 0;
             font-family: Arial, sans-serif;
             height: auto%;  /* 高度自动适应内容 */
-            overflow-x: auto; /* 启用垂直滚动 */
+            overflow-x: hidden; /* 禁止水平滚动 */
+            overflow-y: auto; /* 启用垂直滚动 */
         }
 
         /* 背景图片样式 */
